page section 1 created

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="style/css/mobile.css">
     <!-- css files  -->
 
+    <!-- google font CDN for nunito -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito" rel="stylesheet">
+    <!-- google font CDN for nunito End -->
+
     <style>
 
     </style>
@@ -58,9 +64,37 @@
         </div>
     </nav>
     <div class="wrapper">
-        <div>
+
+        <!-- section 1 start -->
+        <div class="secdiv1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1 class="h1mainhead clr-white my-3">
+                            Supplying the UAE one pet at a time.
+                        </h1>
+                        <span class="spansubhead clr-white ">
+                            Monthly pet supplies delivered to your doorstep
+                        </span>
+                        <div>
+                            <div class="buttn-main bg-dark1 clr-white my-4">
+                                Get Started
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- section 1 end -->
+
+        <!-- section 2 start -->
+        <div class="secdiv2">
 
         </div>
+        <!-- section 2 End -->
+
+
     </div>
 
     <!-- custom js link script tag  -->
