--- a/index.html
+++ b/index.html
@@ -8,54 +8,61 @@
     <title>Furly Pet</title>
 
     <!-- bootstrap CDNs  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <!-- bootstrap CDNs End  -->
     <!-- css files  -->
-    <link rel="stylesheet" href="style/css/regular.css">
-    <link rel="stylesheet" href="style/css/color.css">
-    <link rel="stylesheet" href="style/css/desk.css">
-    <link rel="stylesheet" href="style/css/tab.css">
-    <link rel="stylesheet" href="style/css/mobile.css">
+    <link rel="stylesheet" href="style/css/regular.css" />
+    <link rel="stylesheet" href="style/css/color.css" />
+    <link rel="stylesheet" href="style/css/desk.css" />
+    <link rel="stylesheet" href="style/css/tab.css" />
+    <link rel="stylesheet" href="style/css/mobile.css" />
     <!-- css files  -->
 
     <!-- google font CDN for nunito -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito" rel="stylesheet" />
     <!-- google font CDN for nunito End -->
 
-    <style>
-
-    </style>
+    <style></style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-orenge">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo/furly_logo.svg"></a>
+            <a class="navbar-brand" href="#"><img src="img/logo/furly_logo.svg" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <span class="navbar-toggler-icon"></span>
+        </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-5">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">
                             <div class="d-flex flex-column justify-content-center">
-                                <div class="paw-on-active m-auto"><img src="img/pawformenu.svg" alt=""></div> Home
+                                <div class="paw-on-active m-auto">
+                                    <img src="img/pawformenu.svg" alt="" />
+                                </div>
+                                Home
                             </div>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <div class="d-flex flex-column justify-content-center">
-                                <div class="paw-on-active m-auto"><img src="img/pawformenu.svg" alt=""></div> Sign In
+                                <div class="paw-on-active m-auto">
+                                    <img src="img/pawformenu.svg" alt="" />
+                                </div>
+                                Sign In
                             </div>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <div class="d-flex flex-column justify-content-center">
-                                <div class="paw-on-active m-auto"><img src="img/pawformenu.svg" alt=""></div> Sign Up
+                                <div class="paw-on-active m-auto">
+                                    <img src="img/pawformenu.svg" alt="" />
+                                </div>
+                                Sign Up
                             </div>
                         </a>
                     </li>
@@ -64,7 +71,6 @@
         </div>
     </nav>
     <div class="wrapper">
-
         <!-- section 1 start -->
         <div class="secdiv1">
             <div class="container">
@@ -73,9 +79,9 @@
                         <h1 class="h1mainhead clr-white my-3">
                             Supplying the UAE one pet at a time.
                         </h1>
-                        <span class="spansubhead clr-white ">
-                            Monthly pet supplies delivered to your doorstep
-                        </span>
+                        <span class="spansubhead clr-white">
+                Monthly pet supplies delivered to your doorstep
+              </span>
                         <div>
                             <div class="buttn-main bg-dark1 clr-white my-4">
                                 Get Started
@@ -90,11 +96,60 @@
 
         <!-- section 2 start -->
         <div class="secdiv2">
-
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 ms-auto">
+                        <div class="position-relative divc">
+                            <img class="position-absolute w-100" src="/img/bluedots.webp" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 ms-auto">
+                        <h1 class="headingrand clr-dark2">Everything you need.</h1>
+                        <span class="spansubhead clr-dark3">
+                Don’t have time to head to the stores everytime you run out of
+                supplies? Furly is a monthly subscription package that delivers
+                you a crate full of all your pet needs so you never have to
+                worry about running out of supplies ever again!
+              </span>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- section 2 End -->
 
-
+        <!-- section 3 start -->
+        <div class="secdiv3">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="position-relative divc2">
+                            <img class="position-absolute w-100" src="/img/bluedots.webp" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex align-items-center">
+                        <h1 class="headingrand clr-dark1">What Furly’s all about</h1>
+                        <span class="spansubhead clr-dark3">
+                            Don’t have time to head to the stores everytime you run out of
+                            supplies? Furly is a monthly subscription package that delivers
+                            you a crate full of all your pet needs so you never have to
+                            worry about running out of supplies ever again!
+                        </span>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="/img/dog.webp" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- section 3 End -->
     </div>
 
     <!-- custom js link script tag  -->
