--- a/index.html
+++ b/index.html
@@ -133,24 +133,176 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 d-flex align-items-center">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
                         <h1 class="headingrand clr-dark1">What Furly’s all about</h1>
                         <span class="spansubhead clr-dark3">
-                            Don’t have time to head to the stores everytime you run out of
-                            supplies? Furly is a monthly subscription package that delivers
-                            you a crate full of all your pet needs so you never have to
-                            worry about running out of supplies ever again!
-                        </span>
+                Don’t have time to head to the stores everytime you run out of
+                supplies? Furly is a monthly subscription package that delivers
+                you a crate full of all your pet needs so you never have to
+                worry about running out of supplies ever again!
+              </span>
                     </div>
                     <div class="col-md-6">
-                        <img src="/img/dog.webp" class="w-100">
+                        <img src="/img/dog.webp" class="w-100" />
                     </div>
                 </div>
             </div>
         </div>
         <!-- section 3 End -->
+
+        <!-- section 4 start  -->
+        <div class="secdiv4">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="position-relative divc3">
+                            <img class="position-absolute w-100" src="/img/dotorenge.svg" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <h1 class="headingrand clr-dark2">Boxed. Taped. Delivered.</h1>
+                        <span class="spansubhead clr-dark3">
+                Don’t have time to head to the stores everytime you run out of
+                supplies? Furly is a monthly subscription package that delivers
+                you a crate full of all your pet needs so you never have to
+                worry about running out of supplies ever again!
+              </span>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="/img/sec4bg.webp" class="w-100" style="margin-top: -40px" />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- section 4 End  -->
+
+        <!-- section 5 start  -->
+        <div class="secdiv5">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 ms-auto">
+                        <div class="position-relative divc">
+                            <img class="position-absolute w-100" src="/img/bluedots.webp" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 ms-auto">
+                        <h1 class="headingrand clr-dark1">Yes. It’s personal.</h1>
+                        <span class="spansubhead clr-dark3">
+                Don’t have time to head to the stores everytime you run out of
+                supplies? Furly is a monthly subscription package that delivers
+                you a crate full of all your pet needs so you never have to
+                worry about running out of supplies ever again!
+              </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- section 5 end  -->
+
+        <!-- section 6 press start  -->
+        <div class="presssecsty">
+            <div class="container">
+                <img src="img/presslogos.webp" class="w-100" />
+            </div>
+        </div>
+        <!-- section 6 press end  -->
+
+        <!-- section 7 start  -->
+        <div class="secdiv7">
+            <div class="container">
+                <div class="headstarth d-flex">
+                    <h1 class="headingrand clr-dark2">Frequently Asked Questions</h1>
+                    <img src="img/heart.webp" class="heart-img" />
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-md-5">
+                        <img src="img/cat.webp" class="w-100" />
+                    </div>
+                    <div class="col-md-7">
+                        <div class="container faq-style my-3">
+                            <div class="question headingwellnormal clr-dark3">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            </div>
+                            <div class="answercont">
+                                <div class="answer">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container faq-style my-3">
+                            <div class="question headingwellnormal clr-dark3">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            </div>
+                            <div class="answercont">
+                                <div class="answer">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container faq-style my-3">
+                            <div class="question headingwellnormal clr-dark3">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            </div>
+                            <div class="answercont">
+                                <div class="answer">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container faq-style my-3">
+                            <div class="question headingwellnormal clr-dark3">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                            </div>
+                            <div class="answercont">
+                                <div class="answer">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- section 7 end  -->
     </div>
+
+    <!-- footer start now  -->
+    <footer class="footersection">
+        <div class="container">
+            <div class="foot-logo d-flex justify-content-center">
+                <img src="/img/footerlogo.webp" class="w-100" />
+            </div>
+
+            <div class="footer-nav my-4">
+                <div class="d-flex justify-content-center">
+                    <span class="spansubhead clr-white">Home</span>
+                    <span class="spansubhead clr-white">Build your furly</span>
+                    <span class="spansubhead clr-white">About</span>
+                </div>
+            </div>
+            <hr class="clr-white my-5" />
+            <div class="d-flex coptright">
+                <div><span class=" clr-white">© 2022</span></div>
+                <div class="mx-auto d-flex bottomnav2">
+                    <span class=" clr-white">Privacy Policy </span>
+                    <span class=" clr-white">Terms and conditions </span>
+                </div>
+                <div><a href="#" class="backtop clr-white">Back to top
+                </a></div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end now  -->
 
     <!-- custom js link script tag  -->
     <script src="style/js/functions.js"></script>
