--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row align-items-center der-re">
                     <div class="col-md-6">
-                        <h1 class="headingrand clr-dark2">Boxed. Taped. Delivered.</h1>
+                        <h1 class="headingrand clr-dark2 mt-4">Boxed. Taped. Delivered.</h1>
                         <span class="spansubhead clr-dark3">
                 Don’t have time to head to the stores everytime you run out of
                 supplies? Furly is a monthly subscription package that delivers
