--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-orenge">
-        
+
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo/furly_logo.svg" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -304,6 +304,8 @@
         </div>
     </footer>
     <!-- footer end now  -->
+
+   <!-- alisbha added that -->
 
     <!-- custom js link script tag  -->
     <script src="style/js/functions.js"></script>
