--- a/petSelection.html
+++ b/petSelection.html
@@ -27,8 +27,8 @@
 
 <body>
 
-    <div class="container-fluid p-0 wrapper">
-        <div class="row w-100">
+    <div class="container-fluid wrapper">
+        <div class="row">
 
             <div class=" col-lg-6 col-md-12 bgWhite">
                 <div class="pets-infoBox sectionPadding">
@@ -38,11 +38,10 @@
                         <h1 class="headingrand clr-dark1">Who are we building a box for?</h1>
                         <p class="spansubhead">Let’s start by adding a pet. You can create a box for multiple pets at the same time. </p>
                     </div>
-
-                    <div onclick="petProduct(event,'petBox1')" class="Box pet-selectionBox px-5 py-3 CatBox">
+                    <div onclick="petProduct(event,'petBox1')" class="Box pet-selectionBox px-xl-5 px-md-3 px-3 py-3 CatBox">
                         <div class="row">
                             <div class="col-md-2 d-flex align-items-center">
-                                <div><img src="/img/catPet.webp" alt=""> </div>
+                                <div><img src="/img/catPet.webp" class="w-100" alt=""> </div>
                             </div>
                             <div class="col-md-10">
                                 <h4 class="pet-title">My amazing dog </h4>
@@ -51,10 +50,10 @@
                         </div>
                     </div>
 
-                    <div onclick="petProduct(event,'petBox2')" class="Box pet-selectionBox px-5 py-3 mt-3 DogBox">
+                    <div onclick="petProduct(event,'petBox2')" class="Box pet-selectionBox px-xl-5 px-md-3 px-3 py-3 mt-3 DogBox">
                         <div class="row">
                             <div class="col-md-2 d-flex align-items-center">
-                                <div><img src="/img/dog (1).webp" alt=""> </div>
+                                <div><img src="/img/dogpet.webp" class="w-100" alt=""> </div>
                             </div>
                             <div class="col-md-10">
                                 <h4 class="pet-title">My awesome cat</h4>
@@ -69,10 +68,10 @@
 
                     </div>
 
-                    <div class="pet-selectionBox px-5 py-3">
+                    <div class="pet-selectionBox px-xl-5 px-md-3 px-3 py-3">
                         <div class="row">
                             <div class="col-md-2 d-flex align-items-center">
-                                <div><img src="/img/shelby.svg" alt=""> </div>
+                                <div><img src="/img/shelby.svg" class="w-100" alt=""> </div>
                             </div>
                             <div class="col-md-10">
                                 <h4 class="pet-title">Shelby</h4>
@@ -81,10 +80,10 @@
                         </div>
                     </div>
 
-                    <div class="pet-selectionBox px-5 py-3 mt-3">
+                    <div class="pet-selectionBox px-xl-5 px-md-3 px-3 py-3 mt-3">
                         <div class="row">
                             <div class="col-md-2 d-flex align-items-center">
-                                <div><img src="/img/dog (1).webp" alt=""> </div>
+                                <div><img src="/img/dogpet.webp" class="w-100" alt=""> </div>
                             </div>
                             <div class="col-md-10">
                                 <h4 class="pet-title">Snow </h4>
@@ -131,14 +130,14 @@
 
                     <div class="py-2">
                         <label class="form-lables w-100 py-3">Hair</label>
-                        <div class="d-flex flex-wrap">
-                            <div class="pets my-2"><img src="/img/dog1.svg" alt="">
+                        <div class="d-flex gap1 flex-wrap">
+                            <div class="pets my-1"><img src="/img/dog1.svg" class="w-100" alt="">
                                 <p class="spansubhead pet-title">Small<br/> 1-10 Kg</p>
                             </div>
-                            <div class="pets pet2 my-2"><img src="/img/dog2.svg" alt="">
+                            <div class="pets  my-1"><img src="/img/dog2.svg" class="w-100" alt="">
                                 <p class="spansubhead pet-title">Medium<br/> 11-20 Kg</p>
                             </div>
-                            <div class="pets pet2 my-2"><img src="/img/dog3.svg" alt="">
+                            <div class="pets  my-1"><img src="/img/dog3.svg" class="w-100" alt="">
                                 <p class="spansubhead pet-title">Large<br/> 20+ Kg</p>
                             </div>
                         </div>
@@ -169,19 +168,19 @@
                         <label class="form-lables w-100 py-3">Any allergies ?</label>
 
                         <div class="d-flex flex-wrap">
-                            <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/turkey.svg" alt="">
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/turkey.svg" alt="">
                                 <p class="pt-3 ms-2">Turkey</p>
                             </div>
-                            <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/chicken.svg" alt="">
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/chicken.svg" alt="">
                                 <p class="pt-3 ms-2">Chicken</p>
                             </div>
-                            <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/beef.svg" alt="">
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/beef.svg" alt="">
                                 <p class="pt-3 ms-2">Beef</p>
                             </div>
-                            <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/none.svg" alt="">
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/none.svg" alt="">
                                 <p class="pt-3 ms-2">None</p>
                             </div>
-                            <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3">
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3">
                                 <p class="pt-3 typeText">Other? Type it here</p>
                             </div>
 
@@ -195,90 +194,90 @@
 
             <!-- Pet Selection Form-2 -->
             <div id="petBox2" class="col-lg-6 col-md-12 petSelectionForm">
-    <div class="petSelection-form sectionPadding">
-        <h2 class="clr-dark1">BUILD A FURLY BOX </h2>
-        <h2>Let’s get to know your Cat</h2>
+                <div class="petSelection-form sectionPadding">
+                    <h2 class="clr-dark1">BUILD A FURLY BOX </h2>
+                    <h2>Let’s get to know your Cat</h2>
 
-        <div class="py-2">
-            <label class="form-lables w-100 py-3">Name</label>
-            <div class="row">
-                <div class="col-md-10">
-                    <input type="text" name="" id="selection-inp" placeholder="What's your Cat's Name?" class="w-100">
-                </div>
-            </div>
-        </div>
+                    <div class="py-2">
+                        <label class="form-lables w-100 py-3">Name</label>
+                        <div class="row">
+                            <div class="col-md-10">
+                                <input type="text" name="" id="selection-inp" placeholder="What's your Cat's Name?" class="w-100">
+                            </div>
+                        </div>
+                    </div>
 
-        <div class="py-2">
-            <label class="form-lables w-100 py-3">Gender</label>
-            <div class="row">
-                <div class="col-md-5"><input type="text" name="" id="selection-inp" placeholder="She's a good girl" class="w-100 my-1"></div>
-                <div class="col-md-5"><input type="text" name="" id="selection-inp" placeholder="He's a good boy" class="w-100 my-1"></div>
-            </div>
+                    <div class="py-2">
+                        <label class="form-lables w-100 py-3">Gender</label>
+                        <div class="row">
+                            <div class="col-md-5"><input type="text" name="" id="selection-inp" placeholder="She's a good girl" class="w-100 my-1"></div>
+                            <div class="col-md-5"><input type="text" name="" id="selection-inp" placeholder="He's a good boy" class="w-100 my-1"></div>
+                        </div>
 
 
-        </div>
+                    </div>
 
-        <div class="py-2">
-            <label class="form-lables w-100 py-3">Hair</label>
-            <div class="d-flex flex-wrap">
-                <div class="pets my-2"><img src="/img/long-hairPet.svg" alt="">
-                    <p class="spansubhead pet-title">Long Hair</p>
-                </div>
-                <div class="pets pet2 my-2"><img src="/img/pet2.svg" alt="">
-                    <p class="spansubhead pet-title">Short Hair</p>
-                </div>
-            </div>
-        </div>
+                    <div class="py-2">
+                        <label class="form-lables w-100 py-3">Hair</label>
+                        <div class="d-flex gap1">
+                            <div class="pets my-1"><img src="/img/long-hairPet.svg" class="w-100" alt="">
+                                <p class="spansubhead pet-title">Long Hair</p>
+                            </div>
+                            <div class="pets my-1"><img src="/img/pet2.svg" class="w-100" alt="">
+                                <p class="spansubhead pet-title">Short Hair</p>
+                            </div>
+                        </div>
+                    </div>
 
-        <div class="py-3">
-            <label class="form-lables w-100 py-3">Select the breed and size</label>
-            <div class="row">
-                <div class="col-md-4 my-1">
-                    <select name="" id="select-options" class="w-100">
+                    <div class="py-3">
+                        <label class="form-lables w-100 py-3">Select the breed and size</label>
+                        <div class="row">
+                            <div class="col-md-4 my-1">
+                                <select name="" id="select-options" class="w-100">
                         <option value="select">Select</option>
                         <option value="breed">breed</option>
                     </select>
-                </div>
-                <div class="col-md-4 my-1">
-                    <select name="" id="select-options" class=" w-100">
+                            </div>
+                            <div class="col-md-4 my-1">
+                                <select name="" id="select-options" class=" w-100">
                         <option value="select">Size</option>
                         <option value="breed">breed</option>
                     </select>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+
+                    <div class="py-3">
+                        <label class="form-lables w-100 py-3">Any allergies ?</label>
+
+                        <div class="d-flex flex-wrap">
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/turkey.svg" alt="">
+                                <p class="pt-3 ms-2">Turkey</p>
+                            </div>
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/chicken.svg" alt="">
+                                <p class="pt-3 ms-2">Chicken</p>
+                            </div>
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/beef.svg" alt="">
+                                <p class="pt-3 ms-2">Beef</p>
+                            </div>
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/none.svg" alt="">
+                                <p class="pt-3 ms-2">None</p>
+                            </div>
+                            <div class=" allergic-selection d-flex align-items-center me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3">
+                                <p class="pt-3 typeText">Other? Type it here</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                    <div><button class="buttn-main bg-dark2 clr-white my-4 addPet-btn">Add Pet</button></div>
+
                 </div>
-            </div>
-
-
-
-        </div>
-
-        <div class="py-3">
-            <label class="form-lables w-100 py-3">Any allergies ?</label>
-
-            <div class="d-flex flex-wrap">
-                <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/turkey.svg" alt="">
-                    <p class="pt-3 ms-2">Turkey</p>
-                </div>
-                <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/chicken.svg" alt="">
-                    <p class="pt-3 ms-2">Chicken</p>
-                </div>
-                <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/beef.svg" alt="">
-                    <p class="pt-3 ms-2">Beef</p>
-                </div>
-                <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3"> <img src="/img/none.svg" alt="">
-                    <p class="pt-3 ms-2">None</p>
-                </div>
-                <div class=" allergic-selection d-flex align-items-centerc me-3 my-2"> <input type="checkbox" name="" class="checkbox me-3">
-                    <p class="pt-3 typeText">Other? Type it here</p>
-                </div>
-
-            </div>
-        </div>
-
-
-
-        <div><button class="buttn-main bg-dark2 clr-white my-4 addPet-btn">Add Pet</button></div>
-
-    </div>
             </div>
         </div>
     </div>
@@ -288,7 +287,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- bootstrap script CDNs -->
 
-<script src="./style/js/functions.js"></script>
+    <script src="./style/js/functions.js"></script>
 
 </body>
 
