buildingbox page done

--- a/summarForm.html
+++ b/summarForm.html
@@ -27,7 +27,7 @@
 <body>
 
     <div class="contianer-fluid wrapper">
-        <div class="row w-100">
+        <div class="row ">
 
             <!-- Column-1 -->
             <div class="col-md-6 p-0 bgWhite">
@@ -50,7 +50,7 @@
             <div class="col-md-6">
                 <div class="sectionPadding">
 
-                    <div class="pt-5 mt-5">
+                    <div class=" ">
                         <h1 class="headingrand pt-4 clr-dark1">Now the most important bit. You.</h1>
                     </div>
 
